Added PDF generation and emailing.

--- a/django_wkhtmltopdf_example/static/css/base.css
+++ b/django_wkhtmltopdf_example/static/css/base.css
@@ -1,1 +1,7 @@
-label { display: block; }
+body {
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+label {
+    display: block;
+}
