--- a/pdf_create/templates/pdf_create/pdf_create.html
+++ b/pdf_create/templates/pdf_create/pdf_create.html
@@ -5,6 +5,18 @@
 {% block content %}
     <h2>Create a PDF</h2>
 
+    {% if messages %}
+    <ul class="messagelist">
+        {% for message in messages %}
+        <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
+
+    <p>
+    Enter text below and click Create to generate and email a PDF.
+    </p>
+
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
