Download PDF rather than emailing it.

--- a/pdf_create/templates/pdf_create/pdf_create.html
+++ b/pdf_create/templates/pdf_create/pdf_create.html
@@ -14,7 +14,7 @@
     {% endif %}
 
     <p>
-    Enter text below and click Create to generate and email a PDF.
+    Enter text below and click Create to generate and download a PDF.
     </p>
 
     <form method="post">
